@@ -1,3 +1,6 @@
+2011-09-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Fix quota regression introduced in r309.
+
 2011-09-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix error when a xmf file is missing when removing (ticket #101).
 
